--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -23,7 +23,8 @@ jobs:
          uses: darenm/Setup-VSTest@v1
 
        - name: Restore Packages
-         run: nuget restore Myntra.sln
+         run: nuget restore Myntra/Myntra.sln
+         working-directory: ${{ github.workspace }}
 
        - name: Build Solution
          run: |
