--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -27,9 +27,10 @@ jobs:
          run: nuget restore Myntra/Myntra.sln
          working-directory: ${{ github.workspace }}
 
-       - name: Build Solution
-         run: |
-           msbuild.exe Myntra.sln /p:platform="Any CPU" /p:configuration="Release"
+       - name: Build solution
+         run: msbuild.exe Myntra/Myntra.sln /p:platform="Any CPU" /p:configuration="Release"
+         working-directory: ${{ github.workspace }}
+
 
        - name: Run Tests
          run: vstest.console.exe .\tests\Myntra.Tests\bin\Release\Myntra.Tests.dll
