--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -41,8 +41,8 @@ jobs:
        - name: Run Tests
          run: vstest.console.exe .\Myntra.Tests\bin\Release\Myntra.Tests.dll
          
-       - name: Upload artifact
-         uses: ./_work/_actions/upload-artifact
+       - name: Upload a Build Artifact
+         uses: actions/upload-artifact@v4.6.2
          with:
           name: EZRepBundle
           path: "./_build"
