--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -1,4 +1,4 @@
-name: Main branch CI
+name: Main branch CI-CD
 
 on:  
    push:
@@ -46,3 +46,34 @@ jobs:
          with:
           name: EZRepBundle
           path: "./_build"
+
+          
+   deploy:
+    name: Deploy to Azure VM
+    runs-on: dotnet
+    needs: build
+    environment:
+      name: Main
+      
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: drop
+
+      - name: Deploy via PowerShell to Azure VM
+        shell: powershell
+        run: |
+          $securePassword = ConvertTo-SecureString "${{ secrets.AZURE_VM_PASSWORD }}" -AsPlainText -Force
+          $cred = New-Object System.Management.Automation.PSCredential("${{ secrets.AZURE_VM_USERNAME }}", $securePassword)
+
+          $session = New-PSSession -ComputerName "${{ secrets.AZURE_VM_HOST }}" -Credential $cred -UseSSL -SessionOption (New-PSSessionOption -SkipCACheck -SkipCNCheck)
+
+          Copy-Item -Path "./drop/*" -Destination "C:\inetpub\wwwroot\MyntraApp" -Recurse -ToSession $session
+
+          Invoke-Command -Session $session -ScriptBlock {
+            Import-Module WebAdministration
+            Restart-WebAppPool -Name 'MyntraAppPool'
+          }
+
+          Remove-PSSession $session
