--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -57,8 +57,8 @@ jobs:
       name: Main
       
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      #- name: Checkout repository
+      #  uses: actions/checkout@v2
       
       - name: Download build artifact
         uses: actions/download-artifact@v4.2.1
