--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -57,27 +57,12 @@ jobs:
       name: Main
       
     steps:
-      #- name: Checkout repository
-      #  uses: actions/checkout@v2
-      
-      - name: Download build artifact
-        uses: actions/download-artifact@v4.2.1
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
         with:
-         name: EZRepBundle
-         path: 'C:\Deploy\MyntraApp-githubactions'  # Target folder for deployment on VM
-      
-      - name: Stop IIS website
+          name: EZRepBundle
+          path: Deploy
+ 
+      - name: Extract Zip
         run: |
-         Import-Module WebAdministration
-         Stop-Website -Name "MyntraApp-githubactions"
-        shell: powershell
-
-      - name: Deploy files to IIS site
-        run: |
-         Copy-Item "C:\Deploy\MyntraApp-githubactions\*" "C:\inetpub\wwwroot\MyntraApp-githubactions" -Recurse -Force
-        shell: powershell
-
-      - name: Start IIS website
-        run: |
-         Start-Website -Name "MyntraApp-githubactions"
-        shell: powershell
+          Expand-Archive -Path EZRepBundle/WebApp.zip -DestinationPath C:\Users\Public\Deploy\Myntra -Force
