--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -1,9 +1,15 @@
-name: Main branch CI-CD
+name: Main
 
-on:  
-   push:
-     branches: [ main ]
-
+on:
+  push:
+    branches:
+      - main
+      - FeatureA
+      - Dev
+  pull_request:
+    branches:
+      - Dev
+      - Main
 env:
   ARTIFACT_NAME: drop
   
